# Convo-Bench

./: .env.example  .gitignore  README.md  cli.py  pyproject.toml
.github/workflows/: ci.yml
api/: __init__.py  main.py
convobench/: __init__.py  baselines.py  bench.py  chaos.py  cli.py  config.py  leaderboard.py  reporting.py  run_manifest.py  scenario_pack.py  spec.py  store.py  sweep.py
convobench/adapters/: __init__.py  anthropic.py  base.py  nvidia.py  openai.py
convobench/core/: __init__.py  agent.py  engine.py  environment.py  metrics.py  types.py
convobench/evaluation/: __init__.py  analysis.py  evaluator.py  multijudge.py  rubrics.py
convobench/metrics/: __init__.py  coordination.py  degradation.py  tooling.py
convobench/scenarios/: __init__.py  adversarial.py  base.py  coordination.py  planning.py  realism.py  relay.py
convobench/utils/: __init__.py  logging.py  serialization.py  spec_io.py  versioning.py
docs/: ARCHITECTURE.md  EVALUATION_GUIDE.md  FRONTEND.md  SCENARIOS.md
examples/: advanced_scenarios.py  basic_usage.py  nvidia_benchmark.py
frontend/: package-lock.json  package.json  tailwind.config.js
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/benchmarks/: page.tsx
frontend/src/components/: ConfigPanel.tsx  ConversationView.tsx  DegradationChart.tsx  EvaluationPanel.tsx  ModelSelector.tsx  RunProgress.tsx  ScenarioCard.tsx  index.ts
scripts/: setup.sh  start.sh
tests/: __init__.py  test_deterministic_seeding.py  test_engine.py  test_evaluation.py  test_golden_mock_chain.py  test_metrics_degradation.py  test_metrics_tooling_coordination.py  test_realism_scenarios.py  test_reporting_and_leaderboard.py  test_scenario_pack_instantiation.py  test_scenarios.py  test_spec_io.py  test_spec_models.py  test_store.py  test_trace_versioning.py  test_unified_config.py
